@@ -4,6 +4,7 @@ GCrypt.xs
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+META.yml			Module meta-data (added by MakeMaker)
 ppport.h
 README
 t/01-cipher.t
@@ -11,5 +12,5 @@ t/02-compatibility.t
 t/03-pod.t
 t/04-podcoverage.t
 t/05-size.t
+t/06-multi.t
 typemap
-META.yml                                Module meta-data (added by MakeMaker)
